	cd ~/nco;git commit -a -m 'Version 4.9.0: Balasana';git push
	git tag -a 4.9.0 -m 'ncremap att_flg, centroid opt, fv2fv_flx/stt, gss n2s nfr fix, HRRR, IFS, MPAS BGC, msh_fl, ntp_mth rhea SLURM, rnr=0.0 == destonly, SGS rewrite/parallelize, TR MWF SCRIP, TR volumetric, vrt_nm, vrt prs tm_nbr fix;ncks area_wgt, chk_nan, chk_map, json dcm pnt fix;ncap2 -O fix';git push --tags

	* Improve bit-grooming documentation

2019-12-03  Charlie Zender  <zender@uci.edu>

	* Document --chk_map, --area_wgt, --chk_nan

	* Eliminate renormalize_threshold since it never worked, support renormalize and renormalization_threshold

2019-12-02  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.0-beta03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.0-beta03: Baddha Koṇāsana';git push
	git tag -a 4.9.0-beta03 -m 'ncremap att_flg, centroid opt, fv2fv_flx/stt, gss n2s nfr fix, HRRR, IFS, MPAS BGC, msh_fl, ntp_mth rhea SLURM, rnr=0.0 == destonly, SGS rewrite/parallelize, TR MWF SCRIP, TR volumetric, vrt_nm, vrt prs tm_nbr fix;ncks area_wgt, chk_nan, chk_map, json dcm pnt fix;ncap2 -O fix';git push --tags

	* Support netCDF 4.7.3

2019-11-30  Charlie Zender  <zender@uci.edu>

	* nco_map_chk() print ncks helper commands to examine S,frac_a/b extrema iff dbg >= 1

2019-11-29  Charlie Zender  <zender@uci.edu>

	* nco_map_chk() add minima/maxima cell location to S, frac_a/b

2019-11-28  Charlie Zender  <zender@uci.edu>

	* Add helpful error and HINT when chk_map invoked on unsupported files

	* Round weights between down to 1.0 if overlap fraction in (1.0,1.0+1.0e-10]

2019-11-21  Charlie Zender  <zender@uci.edu>

	* Change to bin_min < weight <= bin_max. Now agrees with TR AnalyzeMap.

	* NCO 4.9.0-beta02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.0-beta02: Uttanasana';git push