@@ -70,7 +70,7 @@ Try to disable Spammers' machines:
 <p><h1 align="center">Bienvenue sur le netCDF Operator (NCO) site</h1>
 
 <p><h2>
-Current stable NCO version is 4.8.1 released <!--#flastmod file="src/nco-4.8.1.tar.gz"-->
+Current stable NCO version is 4.9.0 released <!--#flastmod file="src/nco-4.9.0.tar.gz"-->
 </h2>
 
 <table border=0 width=100%>
@@ -149,7 +149,8 @@ and
 <h2>Recent Releases &amp; Milestones</h2>
 
 <ul>
-<li>2019 Sep&nbsp;??: 4.9.0 <i>In Progress...</i>
+<li>2019 Mar&nbsp;??: 4.9.1 <i>In Progress...</i>
+<li>2019 Dec&nbsp;04: 4.9.0 ncremap lollapalooza
 <li>2019 Jul&nbsp;01: 4.8.1 Sundry features/fixes
 <li>2019 May&nbsp;15; 4.8.0 Vertical interpolation
 <li>2019 Feb&nbsp;20: 4.7.9 Sundry features/fixes
@@ -631,17 +632,25 @@ Identical copies of those tarballs are also stored
 <a href="http://nco.sf.net/src">here</a> on SourceForge for historical
 continuity.
 You may retrieve the source of tagged versions directly with, e.g.,
-<tt>git clone -b 4.8.1 http://github.com/nco/nco.git nco-4.8.1</tt></a>.
+<tt>git clone -b 4.9.0 http://github.com/nco/nco.git nco-4.9.0</tt></a>.
 <ul>
 <li><b>NCO 5.0.0</b>: (<i>Future</i>)
 netCDF4 user-defined types support;
-<tt>ncremap</tt> weight generation;
 <tt>ncks --xtn</tt> better extensive variable treatment?;
-<tt>ncclimo -v</tt> splitter support for regular expressions?;</li>
-<li><b>NCO 4.9.0</b>: (<i>In Progress, features in-progress or complete include</i>) 
+<tt>ncclimo -v</tt> splitter support for regular expressions?;
+<tt>ncremap</tt> support <tt>mbtempest</tt>?;</li>
+<li><b>NCO 4.9.1</b>: (<i>In Progress, features in-progress or complete include</i>) 
 <tt>ncks --bsa</tt> Byte-swap algoritm;
+<tt>ncclimo</tt> spatial averages;
+<tt>ncremap</tt> small-circle weights;</li>
+<li><b>NCO 4.9.0</b>: (<i>In Progress, features in-progress or complete include</i>) 
+<tt>ncks --chk_map</tt> map-file evaluation;
+<tt>ncks --chk_nan</tt> find all NaNs;
 <tt>ncremap</tt> simulaneous horizontal and vertical regridding;
-<tt>ncremap</tt> invokes NCO weight-generator;</li>
+<tt>ncremap</tt> invokes NCO weight-generator;
+<tt>ncremap --job_nbr</tt> parallelism;
+<tt>ncremap --sgs_frc</tt> sub-gridscale acceleration;
+<tt>ncremap --vrt</tt> vertical grid flexibility</li>
 <li><b>NCO 4.8.1</b>: (<i>Current Stable Release</i>)
 <tt>ncap2</tt> fixes single-file handling;
 <tt>ncclimo</tt> fine-grained seasonal parallelism;
@@ -753,7 +762,7 @@ Or, alternatively, permanently add conda-forge (which teems with goodies besides
 &lsquo;<tt>conda config --add channels conda-forge</tt>&rsquo;, then
 install NCO with &lsquo;<tt>conda install nco</tt>&rsquo;.
 The default NCO installed by <tt>conda</tt> is generally within a month of the latest release. 
-<li><a href="https://github.com/conda-forge/nco-feedstock">nco-4.8.1</a> Executables Anaconda-compatible. Maintained by Filipe Fernandes.</li>
+<li><a href="https://github.com/conda-forge/nco-feedstock">nco-4.9.0</a> Executables Anaconda-compatible. Maintained by Filipe Fernandes.</li>
 Thanks to Rich Signell, Filipe Fernandes, Pedro Vicente, Xylar Asay-Davis and others for developing and maintaining the NCO package for conda.
 </ul>
 
@@ -762,7 +771,7 @@ Thanks to Rich Signell, Filipe Fernandes, Pedro Vicente, Xylar Asay-Davis and ot
 <h3><a href="http://www.debian.org">Debian</a> and <a href="http://www.ubuntu.com">Ubuntu</a> GNU/Linux</a></h3>
 <ul>
 <!--
-<li><a href="http://www.debian.org">Debian</a> and <a href="http://www.ubuntu.com">Ubuntu</a> GNU/Linux-compatible Intel systems, prebuilt binary executable <a href="http://www.debian.org">deb</a>: <a href="http://packages.debian.org/testing/math/nco.html">nco-4.8.1</a></li>
+<li><a href="http://www.debian.org">Debian</a> and <a href="http://www.ubuntu.com">Ubuntu</a> GNU/Linux-compatible Intel systems, prebuilt binary executable <a href="http://www.debian.org">deb</a>: <a href="http://packages.debian.org/testing/math/nco.html">nco-4.9.0</a></li>
 -->
 <a href="http://packages.debian.org/unstable/science/nco">Debian NCO</a> and 
 <a href="https://launchpad.net/ubuntu/+source/nco">Ubuntu NCO</a> homepages.
@@ -770,8 +779,8 @@ Thanks to Rich Signell, Filipe Fernandes, Pedro Vicente, Xylar Asay-Davis and ot
 NCO packages in the Debian/Ubuntu repositories (e.g., Sid and Raring) generally lag the packages distributed here by 6&ndash;12 months.
 <a name="beta"></a><a name="prerelease"> <!-- http://nco.sf.net#beta -->
 Newer (beta- or pre-release) packages are often available for intrepid Debian/Ubuntu users as described <a href="https://github.com/nco/nco/tree/master/doc/beta.txt">here</a>.
-<dt>Debian package for most recent NCO release (install with, e.g., &lsquo;<tt>dpkg --install nco_4.8.1-1_i386.deb</tt>&rsquo;):</dt>
-<li><a href="https://launchpad.net/ubuntu/+source/nco/4.8.1-1">nco_4.8.1-1_amd64.deb</a> : Executables AMD64-compatible</li>
+<dt>Debian package for most recent NCO release (install with, e.g., &lsquo;<tt>dpkg --install nco_4.9.0-1_i386.deb</tt>&rsquo;):</dt>
+<li><a href="https://launchpad.net/ubuntu/+source/nco/4.9.0-1">nco_4.9.0-1_amd64.deb</a> : Executables AMD64-compatible</li>
 Thanks to Daniel Baumann, Sebastian Couwenberg, Barry deFreese, Francesco Lovergine, 
 Brian Mays, Rorik Peterson, and Matej Vela for their help packaging
 NCO for Debian over the years. 
@@ -813,12 +822,12 @@ Thanks to Gavin Burris and Kyle Wilcox for documenting build procedures for RHEL
 <h3><a href="http://www.apple.com/macosx/">Mac&nbsp;OS&nbsp;X/Darwin</a></h3>
 <ul>
 <!-- 
-# Mac OS X 10.14 (Mojave) systems (firn, sastrugi):
+# Mac OS X 10.15 (Mojave) systems (firn, sastrugi):
 /usr/bin/scp ~/nco/doc/index.shtml zender,nco@web.sf.net:/home/project-web/nco/htdocs
-cd ~/bin;tar cvzf ${DATA}/nco-4.8.1.macosx.10.14.tar.gz nc*;scp ${DATA}/nco-4.8.1.macosx.10.14.tar.gz zender,nco@web.sf.net:/home/project-web/nco/htdocs/src
+cd ~/bin;tar cvzf ${DATA}/nco-4.9.0.macosx.10.15.tar.gz nc*;scp ${DATA}/nco-4.9.0.macosx.10.15.tar.gz zender,nco@web.sf.net:/home/project-web/nco/htdocs/src
 -->
 The most up-to-date executables are probably those in the tarball below. Those unfamiliar with installing executables from tarballs may try the (older) <a href="http://en.wikipedia.org/wiki/Apple_Disk_Image">DMG</a> files (you may need to add <tt>/opt/local/bin</tt> to your executable path to access those operators).
-<li><a href="src/nco-4.8.1.macosx.10.14.tar.gz">nco-4.8.1.macosx.10.14.tar.gz</a> (<!--#fsize file="src/nco-4.8.1.macosx.10.14.tar.gz"-->): Executables MacOSX 10.14-compatible (last updated <!--#flastmod file="src/nco-4.8.1.macosx.10.14.tar.gz"-->). 
+<li><a href="src/nco-4.9.0.macosx.10.15.tar.gz">nco-4.9.0.macosx.10.15.tar.gz</a> (<!--#fsize file="src/nco-4.9.0.macosx.10.15.tar.gz"-->): Executables MacOSX 10.15-compatible (last updated <!--#flastmod file="src/nco-4.9.0.macosx.10.15.tar.gz"-->). 
 (NB: These executables require
   the <a href="http://trac.macosforge.org/projects/macports/wiki">MacPorts</a>
   <a href="#bld_macports">dependencies</a> for <a href="http://svn.macports.org/repository/macports/trunk/dports/science/nco">NCO</a>). Maintained by NCO Project.</li>
@@ -1012,12 +1021,12 @@ On the <a href="https://sourceforge.net/p/nco/bugs">Bug Tickets</a> site.</li>
 The simplest way to acquire the source is to download the compressed tarball:
 <ul>
 <li>
-<!-- scp ${DATA}/nco-4.8.1.tar.gz zender,nco@web.sf.net:/home/project-web/nco/htdocs/src -->
-<a href="https://github.com/nco/nco/archive/4.8.1.tar.gz">nco-4.8.1.tar.gz</a> 
-(<!--#fsize file="src/nco-4.8.1.tar.gz"--> compressed tar-file)<br>
-<!--#exec cmd="openssl dgst -md5 src/nco-4.8.1.tar.gz"--><br>
-<!--#exec cmd="openssl dgst -sha1 src/nco-4.8.1.tar.gz"--><br>
-<!--#exec cmd="openssl dgst -sha256 src/nco-4.8.1.tar.gz"--> 
+<!-- scp ${DATA}/nco-4.9.0.tar.gz zender,nco@web.sf.net:/home/project-web/nco/htdocs/src -->
+<a href="https://github.com/nco/nco/archive/4.9.0.tar.gz">nco-4.9.0.tar.gz</a> 
+(<!--#fsize file="src/nco-4.9.0.tar.gz"--> compressed tar-file)<br>
+<!--#exec cmd="openssl dgst -md5 src/nco-4.9.0.tar.gz"--><br>
+<!--#exec cmd="openssl dgst -sha1 src/nco-4.9.0.tar.gz"--><br>
+<!--#exec cmd="openssl dgst -sha256 src/nco-4.9.0.tar.gz"--> 
 </li>
 </ul>
 
@@ -1036,8 +1045,8 @@ You may retrieve any NCO distribution you wish from
 <a href="https://help.github.com">GitHub</a>. 
 Usually you wish to retrieve a recent tagged (i.e., released) version.
 This command retrieves the entire NCO repository (&lt; 20&nbsp;MB) and
-then checks out NCO version <tt>4.8.1</tt>:
-<p><tt>git clone https://github.com/nco/nco.git;cd nco;git checkout 4.8.1</tt></p>
+then checks out NCO version <tt>4.9.0</tt>:
+<p><tt>git clone https://github.com/nco/nco.git;cd nco;git checkout 4.9.0</tt></p>
 These commands retrieve the current (&ldquo;bleeding edge&rdquo;)
 development version of NCO into a local directory named <tt>nco</tt>:
 <p><tt>git clone https://github.com/nco/nco.git ~/nco</tt></p> or
@@ -1045,9 +1054,9 @@ development version of NCO into a local directory named <tt>nco</tt>:
 Track changes to the development version using
 <p><tt>cd nco;git pull</tt></p>
 One difference between running a "tagged" release 
-(e.g., <tt>4.8.1</tt>) and the development version is that the
+(e.g., <tt>4.9.0</tt>) and the development version is that the
 tagged release operators will print a valid version number (e.g.,
-<tt>4.8.1</tt>) when asked to do so with the <tt>-r</tt> flag
+<tt>4.9.0</tt>) when asked to do so with the <tt>-r</tt> flag
 (e.g., <tt>ncks -r</tt>).
 The development version simply places today's date in place of the
 version.
@@ -1195,9 +1204,9 @@ As of 20131101 there is no Cygwin package for ANTLR, and the netCDF package does
 
 <li>Once you have installed the pre-requisites as shown above, you may then build the latest stable NCO and install it in, e.g., <tt>/usr/local</tt> with: 
 <tt>
-<dt>wget https://github.com/nco/nco/archive/4.8.1.tar.gz</dt>
-<dt>tar xvzf 4.8.1.tar.gz</dt>
-<dt>cd nco-4.8.1</dt>
+<dt>wget https://github.com/nco/nco/archive/4.9.0.tar.gz</dt>
+<dt>tar xvzf 4.9.0.tar.gz</dt>
+<dt>cd nco-4.9.0</dt>
 <dt>./configure --prefix=/usr/local</dt>
 <dt>make</dt>
 <dt>sudo make install</dt>
